selection and deletion of previous responses
- Added functionality to fetch previous responses from the backend.
- Enabled user to select a response from a dropdown list.
- Added a delete button to remove a selected response."

--- a/web/sf-assessment/src/app/app.component.html
+++ b/web/sf-assessment/src/app/app.component.html
@@ -10,6 +10,7 @@
       *ngFor="let message of messages; let i = index"
       [parser]="parser"
       [message]="message"
+      [prevAnswers]="prevAnswers[message.id]"
       [last]="i === messages.length - 1"
     ></app-message>
   </div>
