--- a/web/sf-assessment/src/app/message/signing-pad/signing-pad.component.scss
+++ b/web/sf-assessment/src/app/message/signing-pad/signing-pad.component.scss
@@ -8,6 +8,7 @@
     border: 1px solid #001b34;
     border-radius: 10px;
     background: #e1e1e1;
+    margin-bottom: 10px;
   }
 
   .button-container {
