--- a/web/sf-assessment/src/app/app.component.scss
+++ b/web/sf-assessment/src/app/app.component.scss
@@ -51,3 +51,23 @@
     }
   }
 }
+.canvas-container {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+canvas {
+  width: 70%;
+  height: 170px;
+  border: 1px solid #aaa; 
+  border-radius: 5px; 
+  background-color: #fff; 
+  margin-left: 15%;
+
+}
+.mat-mdc-raised-button {
+  background-color: #001b34;
+}
+
